[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/scripts/ScreenLeaderboard.gd" type="Script" id=1]
[ext_resource path="res://assets/images/ui/reload.png" type="Texture" id=2]
[ext_resource path="res://assets/images/ui/home.png" type="Texture" id=3]
[ext_resource path="res://assets/images/background.png" type="Texture" id=4]
[ext_resource path="res://src/actors/FadeTransition.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/images/tilesets/default.tres" type="TileSet" id=6]
[ext_resource path="res://assets/images/ui/arrow_left.png" type="Texture" id=7]
[ext_resource path="res://assets/font/Run.tres" type="DynamicFont" id=8]
[ext_resource path="res://src/actors/WindowLeaderboard.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/actors/popups/YesNoPopup.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/scripts/GameTileMap.gd" type="Script" id=11]

[node name="Highscore" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 12, 2, 0, 65536, 0, 0, 65548, 2, 0, 131072, 0, 0, 131084, 2, 0, 196608, 0, 0, 196620, 2, 0, 262144, 0, 0, 262156, 2, 0, 327680, 0, 0, 327692, 2, 0, 393216, 0, 0, 393228, 2, 0, 458752, 0, 0, 458764, 2, 0, 524288, 0, 0, 524300, 2, 0, 589824, 0, 0, 589836, 2, 0, 655360, 0, 0, 655372, 2, 0, 720896, 0, 0, 720908, 2, 0, 786432, 0, 0, 786444, 2, 0, 851968, 0, 0, 851980, 2, 0, 917504, 0, 0, 917516, 2, 0, 983040, 0, 0, 983052, 2, 0, 1048576, 0, 0, 1048588, 2, 0, 1114112, 0, 0, 1114124, 2, 0, 1179648, 0, 0, 1179649, 6, 0, 1179650, 6, 0, 1179651, 6, 0, 1179652, 6, 0, 1179653, 6, 0, 1179654, 6, 0, 1179655, 6, 0, 1179656, 6, 0, 1179657, 6, 0, 1179658, 6, 0, 1179659, 6, 0, 1179660, 2, 0 )
script = ExtResource( 11 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -176.0
margin_top = 24.0
margin_right = 176.0
margin_bottom = 154.0
custom_fonts/font = ExtResource( 8 )
text = "TITLE_LEADERBOARD"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scores" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.0
margin_top = -160.0
margin_right = 176.0
margin_bottom = 320.0
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="Scores"]
margin_right = 660.0
margin_bottom = 280.0
custom_constants/separation = 30

[node name="Normal" parent="Scores/HBox" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 200.0
margin_bottom = 280.0
rect_min_size = Vector2( 200, 280 )

[node name="Score1" parent="Scores/HBox/Normal/Scores/Lines" index="0"]
margin_right = 176.0

[node name="Score2" parent="Scores/HBox/Normal/Scores/Lines" index="1"]
margin_right = 176.0

[node name="Score3" parent="Scores/HBox/Normal/Scores/Lines" index="2"]
margin_right = 176.0

[node name="Score4" parent="Scores/HBox/Normal/Scores/Lines" index="3"]
margin_right = 176.0

[node name="Score5" parent="Scores/HBox/Normal/Scores/Lines" index="4"]
margin_right = 176.0

[node name="Score6" parent="Scores/HBox/Normal/Scores/Lines" index="5"]
margin_right = 176.0

[node name="CoinsFrenzy" parent="Scores/HBox" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 230.0
margin_right = 430.0
margin_bottom = 280.0
rect_min_size = Vector2( 200, 280 )

[node name="Rain" parent="Scores/HBox" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 460.0
margin_right = 660.0
margin_bottom = 280.0
rect_min_size = Vector2( 200, 280 )

[node name="Buttons" type="Control" parent="."]
margin_left = 48.0
margin_top = 448.0
margin_right = 368.0
margin_bottom = 504.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Buttons"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -54.0
custom_constants/separation = 80
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="Button" parent="Buttons/HBoxContainer"]
margin_left = 59.0
margin_right = 121.0
margin_bottom = 56.0
rect_min_size = Vector2( 60, 54 )
mouse_default_cursor_shape = 2
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetButton" type="Button" parent="Buttons/HBoxContainer"]
margin_left = 201.0
margin_right = 261.0
margin_bottom = 56.0
mouse_default_cursor_shape = 2
icon = ExtResource( 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Buttons/HBoxContainer/ResetButton"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
visible = false
margin_left = 32.0
margin_right = 94.0
margin_bottom = 56.0
mouse_default_cursor_shape = 2
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupConfirmReset" parent="." instance=ExtResource( 10 )]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -90.0
margin_right = 150.0
margin_bottom = 90.0
message = "LABEL_RESET_LEADERBOARD"

[node name="FadeTransition" parent="." instance=ExtResource( 5 )]
visible = false
[connection signal="pressed" from="Buttons/HBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="Buttons/HBoxContainer/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed_yes_no" from="PopupConfirmReset" to="." method="_on_YesNoPopup_pressed_yes_no"]
[connection signal="animation_finished" from="FadeTransition" to="." method="_on_FadeTransition_animation_finished"]

[editable path="Scores/HBox/Normal"]
